# tools_claude

./: BUILD.bazel  MODULE.bazel  README.md  WORKSPACE
claude/: claude.bzl  defs.bzl
claude/private/: extensions.bzl  repo.bzl  toolchain.bzl
examples/: BUILD.bazel  claude_version_test.bzl
